# hermes-os

./: .gitignore  .kilocodemodes  .pre-commit-config.yaml  AGENTS.md  AGETS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CORE_CLOSURE_PLAN.md  Cargo.toml  IMPLEMENTATION_STATUS.md  LICENSE  MAIL_WORKING_STATE.md  Makefile  OSS.md  README.md  SECURITY.md  bacon.toml  canonical-evidence-final-report.md  deny.toml  design-qa.md
backend/: Cargo.toml  Makefile  README.md  build.rs  deny.toml
backend/.config/: nextest.toml
backend/architecture/: README.md  policy.json
backend/development/: README.md  compose.yaml
backend/development/authenticated/: boot.sh  compose.yaml  pgbouncer.ini
backend/development/pgbouncer/: pgbouncer.ini  userlist.txt
backend/development/runtime/: Cargo.toml
backend/e2e/: test_api.py
backend/fixtures/signal_hub/: system_sources.toml
backend/migrations/: 0001_create_event_log.sql  0002_create_projection_cursors.sql  0003_create_api_audit_log.sql  0004_add_api_audit_actor_id.sql  0005_create_communication_ingestion.sql  0006_create_secret_references.sql  0007_create_communication_messages.sql  0009_create_documents.sql  0010_create_graph_core.sql  0012_add_attachment_scan_metadata.sql  0014_create_project_link_reviews.sql  0017_create_document_processing.sql  0021_create_v5_whatsapp_web_foundation.sql  0022_create_database_encrypted_secret_vault.sql  0023_create_application_settings.sql  0025_add_message_workflow_state.sql  0028_create_email_personas.sql  0032_create_email_certificates.sql  0034_rename_contacts_to_persons.sql  0035_person_identities_roles_personas.sql  0037_enrichment_expertise_trust.sql  0039_organization_identities_departments.sql  0041_organization_timeline_workflows.sql  0043_organization_risks_alerts.sql  0045_calendar_core_tables.sql  0046_calendar_scheduling_rules.sql  0047_calendar_extensions.sql  0049_tasks_providers.sql  0050_tasks_context.sql  0051_tasks_rules_templates.sql  0054_add_host_vault_secret_store_kind.sql  0056_email_invoices_linked_person.sql  0058_allow_empty_telegram_tdlib_message_bodies.sql  0059_persona_owner_type_constraints.sql  0061_relationship_graph_projection.sql  0063_create_obligations.sql  0066_obligation_graph_projection.sql  0068_expand_relationship_graph_node_kinds.sql  0071_person_identity_trace_types.sql  0073_person_identity_unattached_traces.sql  (+93 more)
backend/release/linux/: README.md
backend/release/macos/: README.md
backend/scripts/: build-distribution-release.mjs  build-local-platform-release-input.mjs  check-architecture-evidence.mjs  check-architecture-policy.mjs  check-cargo-boundaries.mjs  check-dependency-policy.mjs  check-srp-policy.mjs  export-postgres-backup.mjs  generate-release-signing-key.mjs  print-development-platform-endpoints.mjs  render-linux-systemd-unit.mjs  restore-postgres-backup.mjs  run-impacted-tests.mjs  smoke-development-platform.mjs  test-authenticated-storage.mjs  verify-linux-release-manifest.mjs  verify-macos-release-manifest.mjs  verify-release-reproducibility.mjs
backend/scripts/lib/: ai-context-policy.mjs  cargo-boundaries.mjs  cargo-dependency-policy.mjs  cargo-package-policy.mjs  cargo-workspace.mjs  current-implementation-inventory.mjs  implementation-slice-policy.mjs  layout-boundaries.mjs  linux-release-compose.mjs  linux-release-systemd.mjs  phase-gate-policy.mjs  policy-schema.mjs  release-distribution-compiler.mjs  repository-scan.mjs  source-boundaries.mjs  sql-inspection.mjs  srp-policy.mjs  storage-boundaries.mjs  validation-diagnostics.mjs
backend/src/: ai.rs  attachment_intelligence.rs  audit.rs  automation.rs  calendar.rs  calendar_brain.rs  calendar_health.rs  calendar_meetings.rs  calendar_reminders.rs  calendar_scheduling.rs  communications.rs  config.rs  contact_enrichment.rs  contact_identity.rs  contact_intelligence.rs  contacts.rs  contracts.rs  document_processing.rs  documents.rs  email_account_setup.rs  email_ai_reply.rs  email_analytics.rs  email_attachment_dedup.rs  email_drafts.rs  email_explain.rs  email_export.rs  email_extract.rs  email_finance.rs  email_fixture_export.rs  email_fixture_pipeline.rs  email_flags.rs  email_imap_write.rs  email_import.rs  email_ingestion.rs  email_intelligence.rs  email_legal.rs  email_multilingual.rs  email_provider_network.rs  email_rfc822.rs  email_rich_template.rs  (+51 more)
backend/src/ai/: api.rs  control_center.rs  core.rs  hub.rs  mod.rs
backend/src/app/: api_support.rs  connectrpc.rs  error.rs  guard.rs  handlers.rs  mod.rs  provider_runtime_handlers.rs  router.rs  runtime.rs  runtime_task_catalog.rs  signal_hub_support.rs  state.rs  vault_reconciliation.rs  workflow_services.rs
backend/src/application/: address_book_sync.rs  bootstrap.rs  (+60 more)
backend/tests/: ai.rs  ai_architecture.rs  ai_control_center.rs  ai_smoke.rs  calendar.rs  calendar_api.rs  calls_api.rs  characterization_communication.rs  characterization_person.rs  characterization_persona.rs  communication_ingestion.rs  communications_architecture_target.rs  communications_connectrpc.rs  config.rs  consistency_contradiction.rs  consistency_contradiction_architecture.rs  contact_identity.rs  contact_identity_api.rs  contacts.rs  context_packs.rs  contradictions_api.rs  decision_engine.rs  decisions.rs  decisions_api.rs  document_processing.rs  document_processing_api.rs  documents.rs  email_account_management_api.rs  email_account_setup.rs  email_account_setup_architecture.rs  email_fixture_export.rs  email_fixture_pipeline.rs  email_import.rs  email_outbox.rs  email_provider_network.rs  email_rfc822.rs  email_sync.rs  email_sync_pipeline.rs  enrichment_engine.rs  event_consumers.rs  (+135 more)
crates/communications-postgres/: Cargo.toml
crates/graph-postgres/: Cargo.toml
crates/observations-postgres/: Cargo.toml
crates/projects-api/: Cargo.toml
crates/provider-orchestration/: Cargo.toml
crates/provider-zoom/: Cargo.toml
crates/signal-hub-postgres/: Cargo.toml
crates/test-session/: Cargo.toml
crates/testkit/: Cargo.toml
crates/zulip-connector/: Cargo.toml
frontend/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
(+9956 files in other folders)
