[workspace]
resolver = "2"
members = ["backend", "crates/testkit"]
exclude = ["frontend/src-tauri"]

[profile.dev]
debug = "line-tables-only"
incremental = true
codegen-units = 256
lto = false
opt-level = 0

[profile.test]
debug = "line-tables-only"
incremental = true
codegen-units = 256
lto = false
opt-level = 0
