[workspace]
resolver = "2"
members = [
    "backend",
    "crates/kernel",
    "crates/events-api",
    "crates/events-postgres",
    "crates/events-nats",
    "crates/provider-api",
    "crates/provider-zulip",
    "crates/provider-zoom",
    "crates/provider-telemost",
    "crates/provider-orchestration",
    "crates/vault-api",
    "crates/blob-api",
    "crates/communications-api",
    "crates/communications-postgres",
    "crates/signal-hub-api",
    "crates/signal-hub-postgres",
    "crates/observations-api",
    "crates/observations-postgres",
    "crates/connectrpc-contracts",
    "crates/desktop-runtime",
    "crates/test-session",
    "crates/testkit",
]
exclude = ["frontend/src-tauri"]

[profile.dev]
debug = "line-tables-only"
incremental = true
codegen-units = 256
lto = false
opt-level = 0

[profile.test]
debug = "line-tables-only"
incremental = true
codegen-units = 256
lto = false
opt-level = 0
