[package]
name = "hermes-hub-backend"
publish = false
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "MIT"
default-run = "hermes-hub-backend"

[features]
default = []
test-support = []

[lib]
name = "hermes_hub_backend"
path = "src/lib.rs"

[[bin]]
name = "hermes-hub-backend"
path = "src/main.rs"

[[bin]]
name = "hermes-graph-project"
path = "src/bin/hermes_graph_project.rs"

[[bin]]
name = "hermes-email-fixture-export"
path = "src/bin/hermes_email_fixture_export.rs"

[[bin]]
name = "hermes-email-fixture-dev"
path = "src/bin/hermes_email_fixture_dev.rs"

[[bin]]
name = "hermes-email-sync-dev"
path = "src/bin/hermes_email_sync_dev.rs"

[[bin]]
name = "hermes-email-reproject-dev"
path = "src/bin/hermes_email_reproject_dev.rs"

[[bin]]
name = "hermes-document-process"
path = "src/bin/hermes_document_process.rs"

[[bin]]
name = "hermes-zoom-edge-proxy"
path = "src/bin/hermes_zoom_edge_proxy.rs"

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
async-imap = { version = "0.11.2", default-features = false, features = ["runtime-tokio"] }
async-native-tls = { version = "0.6.0", default-features = false, features = ["runtime-tokio"] }
async-trait = "0.1"
axum = { version = "0.8", features = ["ws"] }
base64 = "0.22"
buffa = "0.7"
color-eyre = "0.6"
chacha20poly1305 = "0.10"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
connectrpc = { version = "0.7", features = ["axum"] }
encoding_rs = "0.8"
futures = "0.3"
getrandom = "0.2"
hkdf = "0.12"
hmac = "0.12"
hermes-provider-zulip = { path = "../crates/provider-zulip" }
hermes-provider-zoom = { path = "../crates/provider-zoom" }
hermes-provider-telemost = { path = "../crates/provider-telemost" }
hermes-provider-mail = { path = "../crates/provider-mail" }
hermes-provider-telegram = { path = "../crates/provider-telegram" }
hermes-provider-whatsapp = { path = "../crates/provider-whatsapp" }
hermes-provider-api = { path = "../crates/provider-api" }
hermes-blob-api = { path = "../crates/blob-api" }
hermes-provider-orchestration = { path = "../crates/provider-orchestration" }
hermes-events-api = { path = "../crates/events-api" }
hermes-decisions-api = { path = "../crates/decisions-api" }
hermes-decisions-postgres = { path = "../crates/decisions-postgres" }
hermes-obligations-api = { path = "../crates/obligations-api" }
hermes-obligations-postgres = { path = "../crates/obligations-postgres" }
hermes-calendar-api = { path = "../crates/calendar-api" }
hermes-calendar-postgres = { path = "../crates/calendar-postgres" }
hermes-tasks-api = { path = "../crates/tasks-api" }
hermes-tasks-postgres = { path = "../crates/tasks-postgres" }
hermes-projects-api = { path = "../crates/projects-api" }
hermes-projects-postgres = { path = "../crates/projects-postgres" }
hermes-events-postgres = { path = "../crates/events-postgres" }
hermes-events-nats = { path = "../crates/events-nats" }
hermes-communications-api = { path = "../crates/communications-api" }
hermes-communications-postgres = { path = "../crates/communications-postgres" }
hermes-personas-api = { path = "../crates/personas-api" }
hermes-personas-postgres = { path = "../crates/personas-postgres" }
hermes-graph-api = { path = "../crates/graph-api" }
hermes-graph-postgres = { path = "../crates/graph-postgres" }
hermes-relationships-api = { path = "../crates/relationships-api" }
hermes-relationships-postgres = { path = "../crates/relationships-postgres" }
hermes-signal-hub-api = { path = "../crates/signal-hub-api" }
hermes-signal-hub-postgres = { path = "../crates/signal-hub-postgres" }
hermes-observations-api = { path = "../crates/observations-api" }
hermes-observations-postgres = { path = "../crates/observations-postgres" }
hermes-connectrpc-contracts = { path = "../crates/connectrpc-contracts" }
hermes-desktop-runtime = { path = "../crates/desktop-runtime" }
http-body = "1"
keyring = "3.6"
libloading = "0.8"
qrcode = { version = "0.14.1", default-features = false, features = ["svg"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls"] }
quick-xml = "0.41"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["chrono", "json", "macros", "migrate", "postgres", "runtime-tokio-rustls", "uuid"] }
tantivy = "0.25.0"
thiserror = "2"
tokio = { version = "1", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
url = "2"
uuid = { version = "1", features = ["serde", "v7"] }
zeroize = { version = "1.8", features = ["derive"] }
zip = { version = "6.0.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
async-nats = "0.49.1"
insta = "1.42"
tempfile = "3.27.0"
hermes-backend-testkit = { path = "../crates/testkit" }
tower = { version = "0.5", features = ["util"] }
