[workspace]
members = [
  "src/platform/events",
  "src/platform/runtime_protocol",
  "src/platform/clock/protocol",
  "src/platform/clock/runtime",
  "src/platform/telemetry/protocol",
  "src/platform/telemetry/collector",
  "src/platform/storage/protocol",
  "src/platform/storage/control",
  "src/platform/storage/runtime",
  "src/platform/storage/postgres",
  "src/platform/storage/pgbouncer",
  "src/platform/storage/migrations",
  "src/platform/vault/protocol",
  "src/platform/vault/key_provider",
  "src/platform/vault/key_provider_file",
  "src/platform/vault/store_sqlcipher",
  "src/platform/vault/runtime",
  "src/api/gateway/contracts",
  "src/kernel/control_store/contract",
  "src/kernel/control_store/sqlite",
  "src/kernel",
  "development/runtime",
  "tests/support/kernel-recovery",
  "tests/support/vault",
  "tests/support/clock",
  "tests/support/telemetry",
  "tests/support/storage",
]
resolver = "2"
