[workspace]
members = [
  "src/platform/events",
  "src/platform/events/jetstream",
  "src/platform/events/authority",
  "src/platform/events/authority/runtime",
  "src/platform/events/authority/runtime/control",
  "src/platform/blob/protocol",
  "src/platform/blob/client-contract",
  "src/platform/blob/client",
  "src/platform/blob/runtime",
  "src/platform/blob/service",
  "src/platform/scheduler/protocol",
  "src/platform/scheduler/implementation",
  "src/platform/scheduler/persistence",
  "src/platform/scheduler/jetstream",
  "src/platform/scheduler/runtime",
  "src/platform/runtime_protocol",
  "src/platform/secure_file",
  "src/platform/clock/protocol",
  "src/platform/clock/runtime",
  "src/platform/telemetry/protocol",
  "src/platform/telemetry/collector",
  "src/platform/storage/protocol",
  "src/platform/storage/control",
  "src/platform/storage/runtime",
  "src/platform/storage/vault",
  "src/platform/storage/postgres",
  "src/platform/storage/pgbouncer",
  "src/platform/storage/migrations",
  "src/platform/vault/protocol",
  "src/platform/vault/key_provider",
  "src/platform/vault/key_provider_file",
  "src/platform/vault/store_sqlcipher",
  "src/platform/vault/runtime",
  "src/api/gateway/contracts",
  "src/api/gateway/session_contract",
  "src/api/gateway/session",
  "src/api/gateway/runtime",
  "src/communications-api",
  "src/communications-domain",
  "src/communications-ingress",
  "src/communications-persistence",
  "src/communications-runtime",
  "src/kernel/control_store/contract",
  "src/kernel/control_store/sqlite",
  "src/kernel",
  "src/mail-api",
  "src/mail-core",
  "src/mail-imap",
  "src/mail-persistence",
  "src/mail-runtime",
  "src/telegram-api",
  "src/telegram-core",
  "src/telegram-tdlib",
  "src/telegram-persistence",
  "src/telegram-runtime",
  "src/whatsapp-api",
  "development/runtime",
  "tests/support/kernel-recovery",
  "tests/support/vault",
  "tests/support/clock",
  "tests/support/events",
  "tests/support/blob",
  "tests/support/scheduler",
  "tests/support/telemetry",
  "tests/support/storage",
  "tests/support/mail-communications-slice",
]
resolver = "2"
