[package]
name = "hermes-communications-postgres"
publish = false
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "MIT"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
hermes-communications-api = { path = "../communications-api" }
hermes-observations-api = { path = "../observations-api" }
hermes-observations-postgres = { path = "../observations-postgres" }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["chrono", "json", "postgres", "runtime-tokio-rustls"] }
thiserror = "2"
