[package]
name = "hermes-graph-postgres"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
publish = false
license = "MIT"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
hermes-graph-api = { path = "../graph-api" }
sqlx = { version = "0.8", default-features = false, features = ["chrono", "postgres", "runtime-tokio-rustls"] }
