[package]
name = "hermes-projects-api"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
publish = false

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
serde = { version = "1", features = ["derive"] }
thiserror = "2"

[dev-dependencies]
serde_json = "1"
