[package]
name = "hermes-provider-zoom"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
publish = false
license = "MIT"

[dependencies]
base64 = "0.22"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
getrandom = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
url = "2"
