[package]
name = "hermes-signal-hub-postgres"
publish = false
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "MIT"

[dependencies]
hermes-events-api = { path = "../events-api" }
hermes-signal-hub-api = { path = "../signal-hub-api" }
serde_json = "1"
sqlx = { version = "0.8", default-features = false, features = ["chrono", "json", "postgres", "runtime-tokio-rustls", "uuid"] }
uuid = { version = "1", features = ["v7"] }
