[package]
name = "hermes-test-session"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false
license = "MIT"

[dependencies]
async-nats = "0.49.1"
sqlx = { version = "0.8", default-features = false, features = ["postgres", "runtime-tokio-rustls"] }
testcontainers = { version = "0.27", features = ["docker-compose"] }
tokio = { version = "1", features = ["macros", "net", "process", "rt-multi-thread", "signal", "time"] }
uuid = { version = "1", features = ["v4"] }
