[package]
name = "testkit"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false

[dependencies]
async-nats = "0.49.1"
axum = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
hermes-hub-backend = { path = "../../backend", features = ["test-support"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["chrono", "json", "postgres", "runtime-tokio-rustls"] }
testcontainers = "0.23"
testcontainers-modules = { version = "0.11", features = ["postgres"] }
tokio = { version = "1", features = ["fs", "macros", "net", "rt-multi-thread", "sync"] }
tower = { version = "0.5", features = ["util"] }
uuid = { version = "1", features = ["v4"] }
tempfile = "3.27"
