[package]
name = "hermes-zulip-connector"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
publish = false
license = "MIT"

[dependencies]
hermes-provider-api = { path = "../provider-api" }
hermes-provider-zulip = { path = "../provider-zulip" }
serde = { version = "1", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "2"

[dev-dependencies]
serde_json = "1"
