[package]
name = "app"
version = "0.1.0"
description = "Hermes Hub desktop shell"
authors = ["Hermes Hub"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.89"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
ureq = { version = "3.3.0", default-features = false, features = ["json"] }
