[package]
name = "app"
version = "0.1.0"
description = "Hermes Hub desktop shell"
authors = ["Hermes Hub"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.89"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
# Provider companions remain compiled only for an explicitly admitted future
# provider route. The recovery/System Control desktop bundle has no host bridge.
provider-companions = []

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
hermes-runtime-protocol = { path = "../../backend/src/platform/runtime_protocol" }
hermes-whatsapp-api = { path = "../../backend/src/whatsapp-api" }
prost = "=0.14.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
