[package]
name = "app"
version = "0.1.0"
description = "Hermes Hub desktop shell"
authors = ["Hermes Hub"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.89"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
# Provider host bridges are admitted independently. The recovery/System Control
# desktop bundle has no host bridge unless its exact feature is selected.
whatsapp-host-webview = []
telemost-host-companion = []

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
hermes-runtime-protocol = { path = "../../backend/src/platform/runtime_protocol" }
hermes-whatsapp-api = { path = "../../backend/src/whatsapp-api" }
directories = "=6.0.0"
libc = "=0.2.186"
prost = "=0.14.4"
sha2 = { version = "=0.11.0", default-features = false }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
