[package]
name = "hermes-communications-domain"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
path = "src/lib.rs"

[package.metadata.hermes]
role = "domain"
owner = "communications"
surface = "implementation"

[dependencies]
hermes-communications-api = { path = "../communications-api" }
hermes-communications-ingress = { path = "../communications-ingress" }
