[package]
name = "hermes-communications-runtime"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "hermes-communications-runtime"
path = "src/main.rs"

[package.metadata.hermes]
role = "domain"
owner = "communications"
surface = "runtime"

[dependencies]
hermes-communications-api = { path = "../communications-api" }
hermes-communications-domain = { path = "../communications-domain" }
hermes-communications-ingress = { path = "../communications-ingress" }
hermes-communications-persistence = { path = "../communications-persistence" }
