[package]
name = "hermes-mail-api"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
path = "src/lib.rs"

[package.metadata.hermes]
role = "integration"
owner = "mail"
surface = "contract"

[dependencies]
prost = "=0.14.4"

[build-dependencies]
prost-build = "=0.14.4"
protoc-bin-vendored = "=3.2.0"
