[package]
name = "hermes-mail-core"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
path = "src/lib.rs"

[package.metadata.hermes]
role = "integration"
owner = "mail"
surface = "implementation"

[dependencies]
base64 = "=0.22.1"
hermes-communications-ingress = { path = "../communications-ingress" }
hermes-mail-api = { path = "../mail-api" }
