[package]
name = "hermes-mail-gmail"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
path = "src/lib.rs"

[package.metadata.hermes]
role = "integration"
owner = "mail"
surface = "implementation"

[dependencies]
async-native-tls = "=0.6.0"
async-std = "=1.13.2"
base64 = "=0.22.1"
futures-util = "=0.3.32"
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.150"
