[package]
name = "hermes-mail-imap"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
path = "src/lib.rs"

[package.metadata.hermes]
role = "integration"
owner = "mail"
surface = "implementation"

[dependencies]
async-imap = "=0.11.2"
async-native-tls = "=0.6.0"
async-std = "=1.13.2"
futures-util = "=0.3.32"
hermes-mail-core = { path = "../mail-core" }
hermes-mail-api = { path = "../mail-api" }
