[package]
name = "hermes-mail-smtp"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
path = "src/lib.rs"

[package.metadata.hermes]
role = "integration"
owner = "mail"
surface = "implementation"

[dependencies]
async-native-tls = "=0.6.0"
async-std = "=1.13.2"
hermes-mail-api = { path = "../mail-api" }
