[package]
name = "hermes-telegram-core"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
path = "src/lib.rs"

[package.metadata.hermes]
role = "integration"
owner = "telegram"
surface = "implementation"

[dependencies]
hermes-communications-ingress = { path = "../communications-ingress" }
hermes-telegram-api = { path = "../telegram-api" }
hermes-vault-protocol = { path = "../platform/vault/protocol" }
