[package]
name = "hermes-telegram-persistence"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
path = "src/lib.rs"

[package.metadata.hermes]
role = "integration"
owner = "telegram"
surface = "persistence"

[dependencies]
hermes-communications-ingress = { path = "../communications-ingress" }
hermes-telegram-api = { path = "../telegram-api" }
hermes-storage-protocol = { path = "../platform/storage/protocol" }
serde_json = "=1.0.150"
sqlx = { version = "=0.9.0", default-features = false, features = ["json", "postgres", "runtime-tokio", "tls-rustls-ring"] }
